# mergen_android

./: .gitignore  LICENSE.txt  README.md  android.bat  android.ps1  build.gradle  gradle.properties  settings.gradle
android/: AndroidManifest.xml  bridge.py  build.gradle  clspv.ps1  launch.ps1
android/java/ir/mahdiparastesh/mergen/: Bridge.java  Debug.java  Main.java  RemoteDebug.java  SegmentMarkers.java  Server.java  VisEmotion.java  VisualDebug.java
android/res/drawable/: launcher.xml
android/res/layout/: main.xml
android/res/menu/: main.xml
android/res/values/: themes.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_main.cpp  camera_engine.cpp  camera_engine.h  camera_listeners.cpp  camera_manager.cpp  camera_manager.h  camera_utils.cpp  debug.h  global.h  image_reader.cpp  image_reader.h  main.cpp  native_debug.h  vulkan_test.cpp  vulkan_test.h
app/src/main/cpp/aud/: audio_common.cpp  audio_common.h  audio_recorder.cpp  audio_recorder.h  buf_manager.h  common.cpp  common.h  commons.cpp  commons.h  debug_utils.cpp  debug_utils.h  engine.cpp  engine.h  recorder.cpp  recorder.h
app/src/main/cpp/mem/: queuer.cpp  queuer.h
app/src/main/cpp/otr/: debug.h
app/src/main/cpp/vis/: camera.cpp  camera.h  camera_engine.cpp  camera_engine.h  camera_listeners.cpp  camera_manager.cpp  camera_manager.h  camera_utils.cpp  camera_utils.h  image_reader.cpp  image_reader.h  listeners.cpp  ndk_camera.cpp  ndk_camera.h  recorder.cpp  streamer.cpp  utils.h
app/src/main/cpp/vlk/: compute_vk.cpp  compute_vk.h  global.h  hello_vk.cpp  hello_vk.h
app/src/main/java/ir/mahdiparastesh/mergen/: Main.java
app/src/main/java/ir/mahdiparastesh/mergen/otr/: DoubleClickListener.java
app/src/main/res/layout/: main.xml
app/src/main/res/raw/: senses.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/shaders/: mandelbrot.comp  shader.vert  triangle.frag
common/utils/: camera_utils.cpp  camera_utils.h  native_debug.h
cpp/: CMakeLists.txt  binary_integers.h  global.h  global.hpp  global_vk.hpp  main.cpp  manifest.h  manifest.hpp
cpp/aud/: beeping.hpp  commons.cpp  commons.h  commons.hpp  engine.cpp  microphone.cpp  microphone.h  microphone.hpp  recorder.h  speaker.cpp  speaker.h  speaker.hpp
cpp/hpt/: painful_point.hpp  touch.cpp  touch.h  touchscreen.cpp  touchscreen.h  touchscreen.hpp
cpp/mem/: manifest.cpp  manifest.h  queuer.cpp  queuer.h
cpp/mov/: shaking.hpp  vibrator.cpp  vibrator.h  vibrator.hpp
cpp/rew/: README.md  criterion.cpp  criterion.hpp  expression.h  expression.hpp  rewarder.cpp  rewarder.h  rewarder.hpp
cpp/scm/: crawler.h  manifest.hpp  perception.hpp  subconscious.h  subconscious.hpp
cpp/vis/: README.md  analyses.cpp  analyses.hpp  binary_integers.hpp  bitmap.cpp  bitmap.h  bitmap.hpp  bitmap_stream.h  bitmap_stream.hpp  camera.cpp  camera.h  camera.hpp  colouring.cpp  colouring.h  colouring.hpp  edge_detection.cl  edge_detection.cpp  edge_detection.hpp  global.h  global.hpp  image_reader.cpp  image_reader.h  memory.cpp  memory.hpp  perception.h  perception.hpp  segment.hpp  segmentation.cpp  segmentation.h  segmentation.hpp  segmentation_a.cpp  segmentation_a.hpp  segmentation_b.cpp  segmentation_b.hpp  sequence_files.h  short_term_memory.h  visual_ltm.cpp  visual_ltm.h  visual_ltm.hpp  visual_stm.cpp  (+2 more)
cpp/vlk/: compute_vk.cpp  compute_vk.h  compute_vk.hpp  global.h  global.hpp  hello_vk.cpp  hello_vk.h  hello_vk.hpp  lodepng.cpp  lodepng.h
gradle/wrapper/: gradle-wrapper.properties
shaders/: analyses.frag  analyses.vert  edge_detection.comp  triangle.vert
